# experiments-monorepo

SQLITE FULL-TEXT SEARCH/sqlite-full-text-search-cli-exp/: .gitignore  Makefile  README.md  TODO.md  pyproject.toml
SQLITE FULL-TEXT SEARCH/sqlite-full-text-search-cli-exp/fts_exp/: cli.py
SQLITE FULL-TEXT SEARCH/sqlite-full-text-search-cli-exp/fts_exp/conf/: settings.py
SQLITE FULL-TEXT SEARCH/sqlite-full-text-search-cli-exp/fts_exp/data_models/: db_models.py
SQLITE FULL-TEXT SEARCH/sqlite-full-text-search-cli-exp/fts_exp/data_models/db_fixtures/: sample_data_db_fixture.py
SQLITE FULL-TEXT SEARCH/sqlite-full-text-search-cli-exp/fts_exp/domains/: item_domain.py
SQLITE FULL-TEXT SEARCH/sqlite-full-text-search-cli-exp/fts_exp/views/: base_cli_view.py  create_cli_view.py  create_item_cli_view.py  health_cli_view.py  read_cli_view.py  read_items_cli_view.py  search_cli_view.py
SQLITE FULL-TEXT SEARCH/sqlite-full-text-search-cli-exp/fts_exp/views/admin/: admin_db_create_cli_view.py  admin_db_drop_tables_cli_view.py  admin_db_load_fixtures_cli_view.py
SQLITE FULL-TEXT SEARCH/sqlite-full-text-search-cli-exp/tests/: conftest.py
SQLITE FULL-TEXT SEARCH/sqlite-full-text-search-cli-exp/tests/data_models/: test_db_models.py  test_db_models_search.py
SQLITE FULL-TEXT SEARCH/sqlite-full-text-search-cli-exp/tests/domanins/: test_item_domain.py
SQLITE FULL-TEXT SEARCH/sqlite-full-text-search-cli-exp/vendored-requirements/snowball-for-sqlite-fts5-macos/: fts5stemmer.dylib
dynamodb-queue-to-lambda-vs-sqs-exp/: Makefile  README.md  pyproject.toml  serverless.yml
dynamodb-queue-to-lambda-vs-sqs-exp/ddbq_exp/: dynamodb_order_view.py  dynamodb_parallel_view.py  dynamodb_retry_view.py  dynamodb_task.py  s3_utils.py  views_utils.py
dynamodb-queue-to-lambda-vs-sqs-exp/docs/img/: order-log.csv  parallel1-log.csv  parallel2-log.csv
dynamodb-queue-to-lambda-vs-sqs-exp/scripts/: ddb_producer_order.py  ddb_producer_parallel.py  ddb_producer_retry.py
